# decopatch

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: roundtrip.py  sample_matrix.json
src/decopatch/: __init__.py  __main__.py  cli.py  core.py  data.py  evaluation.py  experiments.py  io.py  metrics.py  pipeline.py
src/decopatch/models/: __init__.py  backbone.py  configs.py  factory.py  heads.py  layers.py  registry.py  variants.py  zoo.py
tests/: test_cli.py  test_core.py  test_models.py
